Bug 16867 - KWin (KDE 4.0) triggers segfault in glx
Summary: KWin (KDE 4.0) triggers segfault in glx
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xorg (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium critical
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-27 15:38 UTC by Joel Feiner
Modified: 2008-07-28 00:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Joel Feiner 2008-07-27 15:38:55 UTC
When starting KWin on KDE 4.0 with the latest git Xserver (as of July 27, 6:30 PM, if that helps, but also for at least a day before then), I get the following in GDB:

0xb7e311e3 in DoMakeCurrent (cl=0x8276724, drawId=<value optimized out>, readId=0, contextId=0, tag=1) at glxcmds.c:623
623		if (!glxc->isDirect) {

The backtrace from GDB is

#0  0xb7e311e3 in DoMakeCurrent (cl=0x8276724, drawId=<value optimized out>, readId=0, contextId=0, tag=1) at glxcmds.c:623
#1  0xb7e33a66 in __glXDispatch (client=0x8276658) at glxext.c:512
#2  0x0808c7c4 in Dispatch () at dispatch.c:448
#3  0x08071aba in main (argc=3, argv=0xbfa313c4, envp=0x48981770) at main.c:397

My xorg.conf is attached.  All drivers are open source (video card is Radeon Mobility X300) and my entire X install is from git.
Comment 1 Michel Dänzer 2008-07-28 00:36:43 UTC
commit ec10eccd56be8b947cd63cae0687b8319857fe60
Author: Michel Dänzer <michel@tungstengraphics.com>
Date:   Mon Jul 28 09:33:04 2008 +0200

    GLX: Unreference drawables bound to the old context, not the new one.

    Apart from the obvious reference counting issue, this fixes
    http://bugs.freedesktop.org/show_bug.cgi?id=16867 .


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.