GLX: Unreference drawables bound to the old context, not the new one.

Apart from the obvious reference counting issue, this fixes
http://bugs.freedesktop.org/show_bug.cgi?id=16867 .